--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                 <GridLayout
                     android:columnCount="2"
                     android:columnOrderPreserved="true"
-                    android:rowCount="4"
+                    android:rowCount="5"
                     android:alignmentMode="alignMargins"
                     android:layout_weight="7"
                     android:layout_width="match_parent"
@@ -68,7 +68,7 @@
                                 android:layout_below="@+id/fractureicon"
                                 android:layout_centerHorizontal="true"
                                 android:text="Fractures"
-                                android:textColor="@color/colorPrimaryDark"
+                                android:textColor="@color/colorFont"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
@@ -112,7 +112,7 @@
                                 android:layout_below="@+id/burnicon"
                                 android:layout_centerHorizontal="true"
                                 android:text="Burns"
-                                android:textColor="@color/colorPrimaryDark"
+                                android:textColor="@color/colorFont"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
@@ -157,7 +157,7 @@
                                 android:layout_below="@+id/cutsicon"
                                 android:layout_centerHorizontal="true"
                                 android:text="Cuts"
-                                android:textColor="@color/colorPrimaryDark"
+                                android:textColor="@color/colorFont"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
@@ -202,7 +202,7 @@
                                 android:layout_below="@+id/scrapesicon"
                                 android:layout_centerHorizontal="true"
                                 android:text="Scrapes"
-                                android:textColor="@color/colorPrimaryDark"
+                                android:textColor="@color/colorFont"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
@@ -246,7 +246,7 @@
                                 android:layout_below="@+id/punctureicon"
                                 android:layout_centerHorizontal="true"
                                 android:text="Punctures"
-                                android:textColor="@color/colorPrimaryDark"
+                                android:textColor="@color/colorFont"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
@@ -290,7 +290,7 @@
                                 android:layout_below="@+id/splintericon"
                                 android:layout_centerHorizontal="true"
                                 android:text="Splinters"
-                                android:textColor="@color/colorPrimaryDark"
+                                android:textColor="@color/colorFont"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
@@ -334,7 +334,7 @@
                                 android:layout_below="@+id/cpricon"
                                 android:layout_centerHorizontal="true"
                                 android:text="CPR"
-                                android:textColor="@color/colorPrimaryDark"
+                                android:textColor="@color/colorFont"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
@@ -377,8 +377,8 @@
                             <TextView
                                 android:layout_below="@+id/sicknessicon"
                                 android:layout_centerHorizontal="true"
-                                android:text="Fractures"
-                                android:textColor="@color/colorPrimaryDark"
+                                android:text="Flu"
+                                android:textColor="@color/colorFont"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
