--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -18,13 +18,12 @@
             android:fillViewport="true"
             android:scrollbars = "vertical"
             android:scrollbarStyle="insideOverlay"
-            android:background="@android:color/white">
+            android:background="@color/colorBackground">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@android:color/white">
+                android:orientation="vertical">
 
                 <TextView
                 android:layout_marginTop="15dp"
