--- a/app/src/main/res/layout/activity_scrapes.xml
+++ b/app/src/main/res/layout/activity_scrapes.xml
@@ -38,7 +38,7 @@
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="120dp"
+                    android:layout_height="130dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -60,7 +60,7 @@
                         <TextView
                             android:text="1. Stop bleeding by pressing a clean, soft cloth against the wound for a few minutes."
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
@@ -95,7 +95,7 @@
                         <TextView
                             android:text="2. Clean the wound"
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
@@ -129,7 +129,7 @@
                         <TextView
                             android:text="3. If you want, put a light layer of an antibiotic ointment around the injury to kill germs."
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
@@ -163,7 +163,7 @@
                         <TextView
                             android:text="4. Dry the area lightly and cover it with gauze or other type of bandage."
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
@@ -197,7 +197,7 @@
                         <TextView
                             android:text="5. To prevent infection and reduce scarring, don't pick at the scab or skin around the wound."
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
