--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,46 +18,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@android:color/white">
+            android:background="@color/colorBackground">
 
-            <TextView
+            <Button
                 android:layout_width="match_parent"
-                android:background="@drawable/red_border_top"
                 android:layout_height="wrap_content"
                 android:text="Change Background"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 android:textColor="#c60000"/>
 
-            <TextView
+            <Button
                 android:layout_width="match_parent"
-                android:background="@drawable/red_border_top"
                 android:layout_height="wrap_content"
                 android:text="Change Language"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 android:textColor="#c60000"/>
 
 
-            <TextView
+            <Button
                 android:layout_width="match_parent"
-                android:background="@drawable/red_border_top"
                 android:layout_height="wrap_content"
                 android:text="Emergency Dial to *_*"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 android:textColor="#c60000"/>
 
 
-            <TextView
+            <Button
                 android:layout_width="match_parent"
-                android:background="@drawable/red_border_top"
                 android:layout_height="wrap_content"
-                android:text="Buy Premium Mode"
-                android:textSize="30sp"
+                android:text="Donate to our KickStarter"
+                android:textSize="24sp"
                 android:textColor="#c60000"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:background="@drawable/red_border_top"
-                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
