--- a/app/src/main/res/layout/activity_splinters.xml
+++ b/app/src/main/res/layout/activity_splinters.xml
@@ -61,7 +61,7 @@
                         <TextView
                             android:text="1. Clean the wound with soap and water."
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
@@ -97,7 +97,7 @@
                         <TextView
                             android:text="2. Remove large splinters with tweezers."
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
@@ -131,7 +131,7 @@
                         <TextView
                             android:text="3. If the small splinters hurt use sticky tape to pull out."
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
@@ -165,7 +165,7 @@
                         <TextView
                             android:text="4. If it doesn’t hurt let it take its course."
                             android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorFont"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
