--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -11,6 +11,11 @@
         android:title="Tips n' News">
     </item>
 
+    <item android:id="@+id/tracker"
+        android:icon="@drawable/health"
+        android:title="Health Tracker">
+    </item>
+
     <item android:id="@+id/settings"
         android:icon="@drawable/settings"
         android:title="Settings">
