--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="colorPrimary">#130c8c</color>
-    <color name="colorPrimaryDark">#0a0463</color>
+<resources>#ed1b2e
+    <color name="colorPrimary">#ed1b2e</color>
+    <color name="colorFont">#0a0463</color>
+    <color name="colorPrimaryDark">#d41121</color>
     <color name="colorAccent">#0000FF</color>
     <color name="colorBackground">#E0FFFF</color>
     <color name="colorWhite">#FFFFFF</color>
