update i dont know
but the icons logos r on

--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -20,7 +20,7 @@
             android:scrollbarStyle="insideOverlay"
             android:background="@color/colorBackground">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
@@ -77,7 +77,7 @@
 
                 </LinearLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </ScrollView>
 
