--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -12,62 +12,21 @@
         android:id="@+id/Drawer_Layout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
-        <ScrollView
+
+        <ListView
+            android:id="@+id/listNews"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:scrollbars = "vertical"
-            android:scrollbarStyle="insideOverlay"
-            android:background="@color/colorBackground">
+            android:background="#FFFFFF"
+            android:divider="#F5F5F5"
+            android:dividerHeight="1dp"
+            android:visibility="visible" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center"
-                android:textColor="#c60000"
-                android:textSize="25sp"
-                android:text="TIPS"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-                <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="470dp"
-                android:src="@drawable/health_art1"/>
-
-                <ImageView
-                    android:layout_marginTop="5dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="490dp"
-                    android:src="@drawable/health_art2" />
-
-
-                <TextView
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
-                    android:textColor="#c60000"
-                    android:textSize="25sp"
-                    android:text="News"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <ImageView
-                    android:layout_marginTop="15dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="490dp"
-                    android:src="@drawable/health_art2"/>
-
-
-            </LinearLayout>
-
-        </ScrollView>
-
+        <ProgressBar
+            android:id="@+id/loader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
