--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -36,10 +36,9 @@
 
                     <!-- Row 1 -->
                     <android.support.v7.widget.CardView
-                        android:layout_height="140dp"
+                        android:layout_height="wrap_content"
                         android:layout_width="0dp"
                         android:layout_columnWeight="1"
-                        android:layout_rowWeight="1"
                         android:layout_marginTop="4dp"
                         android:layout_marginBottom="10dp"
                         android:layout_marginLeft="6dp"
@@ -85,10 +84,9 @@
 
                     <!-- Row 2 -->
                     <android.support.v7.widget.CardView
-                        android:layout_height="110dp"
+                        android:layout_height="wrap_content"
                         android:layout_width="0dp"
                         android:layout_columnWeight="1"
-                        android:layout_rowWeight="1"
                         android:layout_marginBottom="10dp"
                         android:layout_marginLeft="6dp"
                         android:layout_marginRight="6dp"
